Fixed jerky scroll issue. It was the padding from #hello i believe. Added more media queries for navbar. Fixed hamburger menu which was displaying as only 1 bar instead of 3. Improved spacing for smaller viewports.

--- a/css/main.css
+++ b/css/main.css
@@ -115,15 +115,38 @@ a:active {
 .break {
   display: none;
 }
+@media all and (max-width: 430px) {
+  .navbar-brand h1 {
+    margin-top: -32px;
+    padding-top: 3px;
+    line-height: 0.8;
+  }
+  .break {
+    display:block;
+  }
+}
 @media all and (min-width: 768px) and (max-width: 992px) {
   .navbar-brand h1 {
     margin-top: -32px;
+    padding-top: 3px;
+    line-height: 1.0;
   }
   .break {
     display: block;
   }
 }
-
+@media all and (min-width: 431px) and (max-width: 767px) {
+  .navbar-brand h1 {
+    line-height: 20px;
+  }
+}
+.navbar-toggle {
+  padding: 0px;
+}
+.navbar-toggle .icon-bar {
+  width: 26px;
+  height: 3px;
+}
 /*--
     transition custom style
 --*/
@@ -242,6 +265,11 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   padding: 25px;
   padding-bottom: 10px;
   margin-top: -85px;
+}
+@media screen and (max-width: 767px) {
+  #hello {
+    padding-bottom: 0px;
+  }
 }
 .sticky {
   position: fixed;
@@ -367,6 +395,11 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   -webkit-transition: .3s all;
   -o-transition: .3s all;
   transition: .3s all;
+}
+@media all and (max-width: 767px) {
+  #cocktail-picker-button {
+    margin-bottom: 50px;
+  }
 }
 #cocktail-picker {
   padding: 35px 0px 50px;
