--- a/css/responsive.css
+++ b/css/responsive.css
@@ -166,11 +166,11 @@ px      68    160    252    */
     padding: 3px 0;
   }
   nav .block .navbar-default .navbar-header {
-    padding-bottom: 15px;
+    /* padding-bottom: 15px; */
     margin-top: 0px;
   }
   nav .block .navbar-default .navbar-header .navbar-toggle {
-    margin-top: 15px;
+    /* margin-top: 15px; */
     border: none;
   }
   nav .block .navbar-default .navbar-header .navbar-toggle .icon-bar {
@@ -184,6 +184,9 @@ px      68    160    252    */
   }
   nav .block .navbar-default .navbar-header .navbar-toggle:hover {
     background: none;
+  }
+  .icon-bar-space {
+    margin-bottom: 5px;
   }
   /*--
     slider Start
